--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(gi_system)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(gi_system GIS.cpp CommandProcessor.cpp CommandProcessor.h World.cpp World.h GISRecord.h HashTable.cpp HashTable.h)
+add_executable(gi_system GIS.cpp CommandProcessor.cpp CommandProcessor.h World.cpp World.h GISRecord.h HashTable.cpp HashTable.h Logger.h Logger.cpp)
